force-app/main/default/objects/Time_Entry__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Created By: CC
Department: BW
Purpose: Date of Time Entry.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>