force-app/main/default/objects/Time_Entry__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By: CC
Department: BW
Purpose: Hours/Time recorded.</description>
    <label>Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>