force-app/main/default/objects/Time_Entry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created By: FV
Department: BW
Purpose: Allows the Time Entry objects to have extra types if needed (i.e. for LDA the time entry can be either federal or non-profit).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitwise (Company)</fullName>
            </value>
            <value>
                <fullName>Bitwise Impact (Nonprofit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>