force-app/main/default/objects/Time_Entry__c/listViews/LDA_Time_Entries_Last_30_days.listView-meta.xml
<ListView>
    <fullName>LDA_Time_Entries_Last_30_days</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Hours__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>LDA - Latest Time Entries</label>
</ListView>